Usando o checkbox no HTML

--- a/Checkbox.html
+++ b/Checkbox.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criando Checkbox com HTML</title>
+  <title>Criando um checkbox</title>
 </head>
 <body>
-  <h2>Qual a sua linguagem favorita?</h2>
-  <input type="radio" id="HTML" name="fav_language" value="HTML">
-  <label for="HTML">HTML</label><br>
-  <input type="radio" id="CSS" name="fav_language" value="CSS">
-  <label for="CSS">CSS</label><br>
-  <input type="radio" id="Javascript" name="fav_language" value="Javascript">
-  <label for="Javascript"> Javascript</label><br>
-  <input type="radio" id="PHP" name="fav_language" value="PHP">
-  <label for="PHP">PHP</label><br>
-  <input type="radio" id="Python" name="fav_language" value="Python">
-  <label for="Python">Python</label><br>
-  <input type="radio" id="Cobol" name="fav_language" value="Cobol">
-  <label for="Cobol">Cobol</label>
+ <h2>Cidades que já visitei:</h2>
+  <form>
+    <input type="checkbox" id="Rio_De_janeiro" name="cidade" value="Rio_De_Janeiro">
+    <label for="Rio_De_Janeiro">Rio de Janeiro</label><br>
+    <input type="checkbox" id="Nova_Iguacu" name="cidade" value="Nova_Iguacu">
+    <label for="Nova_iguacu">Nova Iguaçu</label><br>
+    <input type="checkbox" id="Cabo_Frio" name="cidade" value="Cabo_Frio">
+    <label for="Cabo_Frio">Cabo Frio</label><br>
+    <input type="checkbox" id="Petropolis" name="cidade" value="Petropolis">
+    <label for="Petropolis">Petrópolis</label><br>
+    <input type="checkbox" id="Jurere_Internacional" name="cidade" value="Juere_Internacional">
+    <label for="Juerere_Internacional">Jurere Internacional</label><br>
+  </form>
 </body>
 </html>
